Fixed scaling of scrollbars issue with zoom

--- a/app/src/css/styles.css
+++ b/app/src/css/styles.css
@@ -106,8 +106,8 @@ h3[type='secondary'] {
 }
 
 ::-webkit-scrollbar {
-  height: 12px;
-  width: 12px;
+  height: 10px;
+  width: 10px;
   background: $backgroundTertiary;
 }
 
